Fixed vertical alignment on footer IE Chrome tested

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -55,6 +55,10 @@ footer {
 	p {
 		color: @themeLightColor;
 	}
+> div.parentFooter
+{
+	max-width: 1050px;
+	margin:auto;
 
 	>div.footer {
 		max-width: @fixedWidth;
@@ -88,6 +92,7 @@ footer {
 			}
 		}
 	}
+}
 }
 
 
